Adds Saving of answers to local storage Adds Fade in for questions Fixes timing of answer focus. Clears answer on question advance.
Signed-off-by: Aaron Eiche <aaron@aaroneiche.com>

--- a/style.css
+++ b/style.css
@@ -8,7 +8,10 @@ body {
   font-family: Vera;
 }
 
-@font-face { font-family: Vera; src: url('Vera.ttf'); }
+@font-face {
+  font-family: Vera;
+  src: url(Vera.ttf);
+}
 
 #question {
   text-align: center;
